# pomodoro-time

./: .dockerignore  .gitignore  .test.env  Dockerfile  Makefile  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  ruff.yml
alembic/: env.py
alembic/versions/: 082628c1dfcf_added_type_to_category.py  16766cde3777_added_is_active_field_to_caregory.py  2025_05_28_2056-521f2d2acc64_added.py  2025_05_28_2102-232889a1d0ab_.py  2025_05_28_2104-fdb9716c9db0_added_default_pomodoro_count.py  2025_05_28_2138-92afdf79f7b0_added_category.py  3644a1b3c43d_alter_creator_id_field_task.py  3a01945b40d1_delete_is_active_field_from_tasks.py  572175180e46_added_relationship_user_tasks.py  689e12fbd124_created_user_model.py  723415527c59_renamed_password_field_in_user.py  87f4274a57a6_changed_password_field_in_user.py  aebb9a351deb_changed_password_field_in_user.py  bfc59f6aee92_initial.py  bfd7646b1d51_changed_password_field_in_user.py  dbc957b2f568_changed_password_field_name_in_user.py  fe2569814d13_deleted_type_from_category.py
infra/: gunicorn.conf.py
src/: __init__.py  main.py  ping.py
src/auth/: __init__.py  clients.py  dependencies.py  models.py  repository.py
src/auth/exceptions/: __init__.py  auth.py  users.py
src/auth/routers/: __init__.py  auth.py  socials.py  users.py
src/auth/schemas/: __init__.py  auth.py  socials.py  user.py  users.py
src/auth/services/: auth.py  (+3 more)
src/categories/: models.py
src/core/: __init__.py  broker.py  config.py  database.py  dependencies.py  log_config.py  middleware.py  repository.py  service.py  utils.py
src/tasks/: __init__.py  cache.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/users/: clients.py  dependencies.py
tests/: conftest.py
tests/fixtures/: broker.py  core.py
worker/: celery.py
(+40 files in other folders)
