[project]
name = "pomodoro-analytics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.7",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    'bcrypt==4.0.1',
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "python-slugify>=8.0.4",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 100
