[project]
name = "pomodoro-analytics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    'bcrypt==4.0.1',
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pip>=25.1.1",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "python-slugify>=8.0.4",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio>=1.0.0",
    "pytest-factoryboy>=2.7.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
